set term png
set output "plot3frame.png"
set xlabel "x-axis pixel"
set ylabel "y-axis pixel"
set grid
#set key outside
#set key left 
plot [1:3056][1:3056] 'listnewskyot.list' u 5:6 with p pt 7 ps 1 title 'new' , 'listskyot.list' u 5:6 with p pt 4 ps 1 title '20img','list3frame.list' u 5:6  with p pt 6 ps 2 title '3frames'
